--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity
+            android:name=".ListaDrinksActivity"
+            android:label="@string/title_activity_lista" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+    </activity>
+
+        <activity android:name=".ExibeDetalhesActivity">
+
         </activity>
-        <activity
-            android:name=".ListaActivity"
-            android:label="@string/title_activity_lista"></activity>
     </application>
 
 </manifest>
